
	* po/zh_TW.po: Update po file.
	* src/betaradio.c: Replace url by some condition.
	* src/gstplay.c: Use playbin2.
	* Makefile.am,
	autogen.sh,
	configure.ac,
	debian/README,
	debian/README.source,
	debian/changelog,
	debian/compat,
	debian/control,
	debian/copyright,
	debian/patches/series,
	debian/rules,
	debian/source/format,
	man/Makefile.am,
	man/betaradio.1: Debianized.

2010-06-30  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/betaradio.c: Add more debug options from gst.

2010-06-29  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/gstplay.c: Adjust blocksize for mms.

2010-06-28  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/hichannel.json,
	utils/list.json,
	utils/ptt.json: Prepare for new mechanism.
	* utils/list.json: Fix wrong json format.
	* utils/ptt.json: Fix wrong json format.
	* utils/ptt.json: Fix wrong json format.
	* utils/hichannel.json,
	utils/ptt.json: Add property.
	* po/zh_TW.po,
	src/betaradio.c,
	src/gstplay.c,
	src/gstplay.h: Add mp3 streaming support and allow different sources.
	* po/zh_TW.po,
	utils/ptt.json: Rename pttradio's title.
	* src/gstplay.c: Enlarge blocksize to 320KBytes.

2010-06-26  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/Makefile.am: Not to install header files.
	* src/betaradio.c: Not to blink icon.
	* src/betaradio.c, 
	web/hichannel.json -> utils/hichannel.json: Change source.
	* web/jquery.cookie.js,
	web/jquery.timers.js,
	web/player.css,
	web/player.html,
	web/player.ico,
	web/player.js: Remove unneeded files.
	* po/zh_TW.po: Update language translation.
	* src/betaradio.c: Check icon before use.
	* configure.ac: Update GTK+ requirement.
	* autogen.sh,
	po/zh_TW.po,
	src/betaradio.c: Polish.
	* data/betaradio.desktop.in: Update language translation.

2010-06-25  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* data/radio-off.png,
	data/radio-on.png,
	src/channel.c,
	src/channel.h,
	src/eggtrayicon.c,
	src/eggtrayicon.h,
	src/radiosite.c,