@@ -3,14 +3,13 @@ Section: x11
 Priority: extra
 Maintainer: Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 Build-Depends: quilt (>= 0.46-7~), debhelper (>= 7.0.50~), autotools-dev,
-    autoconf, automake, libtool, gettext, cvs,
-    libgtk2.0-dev (>= 2.10), libgstreamer0.10-dev, libjson-cat-dev
+    libgtk2.0-dev (>= 2.10), libgstreamer0.10-dev, libjson-glib-dev, libsoup2.4-dev
 Standards-Version: 3.8.4
 Homepage: http://code.google.com/p/betaradio/
 
 Package: betaradio
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libjson-cat0,
+Depends: ${shlibs:Depends}, ${misc:Depends}, libjson-glib-1.0-0, libsoup2.4-1,
     gstreamer0.10-plugins-bad, gstreamer0.10-plugins-ugly, gstreamer0.10-ffmpeg
 Description: hiChannel internet radio client on GNU/Linux
  With this client you can listen to the hiChannel internet radio without
