@@ -4,7 +4,7 @@ This work was packaged for Debian by:
 
 It was downloaded from:
 
-    http://betaradio.googlecode.com/svn/branches/debian/
+    http://betaradio.googlecode.com/svn/trunk/
 
 Upstream Author(s):
 
