@@ -11,7 +11,3 @@
 
 %:
 	dh --with quilt  $@
-
-override_dh_auto_configure:
-	./autogen.sh
-	dh_auto_configure
